update for nvidia application
Include publications

--- a/Khalil_resume.tex
+++ b/Khalil_resume.tex
@@ -146,7 +146,7 @@
 
 		%------------------------------------------------
 
-		\tableentry{2013}{\textbf{ADNOC Graduate fellowship}}{}
+		\tableentry{2013}{\textbf{ADNOC graduate fellowship}}{}
 		\tableentry{}{\textit{Khalifa University}}{spaceafter}
 
 		%------------------------------------------------
@@ -212,9 +212,7 @@
 % }
 
 \additional{
-
 	%------------------------------------------------
-
 	\begin{supertabular}{rl} % Start a table with two columns, the table will ensure everything is aligned
 
 		%------------------------------------------------
@@ -227,7 +225,21 @@
 		%------------------------------------------------
 
 	\end{supertabular}
+}
 
+%----------------------------------------------------------------------------------------
+%	PUBLICATIONS
+%----------------------------------------------------------------------------------------
+
+\publications{
+	%------------------------------------------------
+	\begin{supertabular}{rl} % Start a table with two columns, the table will ensure everything is aligned
+
+		%------------------------------------------------
+		\tableentry{\LARGE\faMortarBoard}{ {\href{https://scholar.google.com/citations?user=2UAU3bMAAAAJ&hl=en&oi=sra}{Google Scholar Profile}} }{}
+		%------------------------------------------------
+		
+	\end{supertabular}
 }
 
 %----------------------------------------------------------------------------------------
@@ -242,19 +254,19 @@
 
 \section{Research}
 
-{\raggedright\textbf{``Optimization-driven set-based design for dynamic design requirements"}}
-\textit{\center How do you design a component when the design requirements can change at any moment and without advance notice?}
-That is the question my dissertation tries to answer. To do so, I came up with design metrics for qualitative descriptions such as flexibility and robustness. I used optimization, and machine learning to obtain thousands of designs. This is a \textbf{1000 fold} increase in the number of alternatives presented to clients in the aerospace industry. This culminated in a technology transfer at GKN aerospace.
+{\raggedright\textbf{``Optimization of infectious disease prevention policies using agent-based modeling"}}
+\textit{\center How can we apply the principles of design and decision-making to help bring the pandemic under control?}
+To answer this question, I modeled how an infectious disease spreads in a small population. Diseases such as COVID-19 spread through social interaction. I programmed intelligent agents to model a complex social system. I used optimization to determine the critical amount of intervention necessary to keep the disease in check. I used GPU acceleration for the agent-based simulation and obtained performance enhancements of up to \textbf{100X} a CPU simulation. The policies I obtained had a socio-economic impact that is \textbf{5 times less} than that of a complete lock-down.
 
-\programlang{\color{python}}{python}~\programlang{\color{magenta}}{C++}~\programlang{\color{matlab}}{MATLAB}~\programlang{\color{rpackage}}{R}~\round{\href{https://github.com/khbalhandawi/DM_SBD_opt}{\small\faGlobe~Online open-source code}}{proglang}~\round{\href{https://www.chalmers.se/en/departments/ims/news/Pages/Optimizationdriven-setbased-design-.aspx}{\small\faGlobe~Online news article}}{proglang}
+\programlang{\color{magenta}}{C++}~\programlang{\color{cuda}}{CUDA}~\programlang{\color{python}}{python}~\programlang{\color{qt}}{Qt}~\round{\href{https://github.com/khbalhandawi/COVID_SIM}{\small\faGlobe~Online open-source code}}{proglang}
 
 \medskip % Extra whitespace before the next section
 
-{\raggedright\textbf{``Optimization of infectious disease prevention policies using agent-based modeling"}}
-\textit{\center How can we apply the principles of design and decision-making to help bring the pandemic under control?}
-To answer this question, I modeled how an infectious disease spreads in a small population. Diseases such as COVID-19 spread through social interaction. I programmed intelligent agents to model a complex social system. I used optimization to determine the critical amount of intervention necessary to keep the disease in check. The policies I obtained had a socio-economic impact that is \textbf{5 times less} than that of a complete lock-down.
+{\raggedright\textbf{``Optimization-driven set-based design for dynamic design requirements"}}
+\textit{\center How do you design a component when the design requirements can change at any moment and without advance notice?}
+That is the question my dissertation tries to answer. To do so, I came up with design metrics for qualitative descriptions such as flexibility and robustness. I used optimization, and machine learning to obtain thousands of designs. This is a \textbf{1000 fold} increase in the number of alternatives presented to clients in the aerospace industry. This culminated in a technology transfer at GKN aerospace to provide them with a \textbf{competitive edge} and shorten lead times.
 
-\programlang{\color{magenta}}{C++}~\programlang{\color{cuda}}{CUDA}~\programlang{\color{python}}{python}~\programlang{\color{qt}}{Qt}~\round{\href{https://github.com/khbalhandawi/COVID_SIM}{\small\faGlobe~Online open-source code}}{proglang}
+\programlang{\color{python}}{python}~\programlang{\color{magenta}}{C++}~\programlang{\color{matlab}}{MATLAB}~\programlang{\color{rpackage}}{R}~\round{\href{https://github.com/khbalhandawi/DM_SBD_opt}{\small\faGlobe~Online open-source code}}{proglang}~\round{\href{https://www.chalmers.se/en/departments/ims/news/Pages/Optimizationdriven-setbased-design-.aspx}{\small\faGlobe~Online news article}}{proglang}
 
 \medskip % Extra whitespace before the next section
 
