Edit NVIDIA cover letter (less technical)

--- a/Cover_letters/nvidia/Cover_letter.tex
+++ b/Cover_letters/nvidia/Cover_letter.tex
@@ -107,21 +107,29 @@ Toronto, Ontario, Canada\\[6pt] \medskip
 %----------------------------------------------------------------------------------------
 Dear Ms. Malloni,
 
-\medskip % Extra whitespace before the next section
+\medskip % Extra whitespace before the next section 
+I am very excited to learn of the opportunity to be a part of NVIDIA's growing research team as a research scientist. While I may not be your typical computer science candidate because of my mechanical engineering background, I believe I can add a lot of value to the research done at NVIDIA because of my multidisciplinary skillset. I view this as a strength because I am able to communicate ideas and concepts openly across multiple teams and help bring researchers from several backgrounds together. 
 
-I am very excited to learn of the opportunity to work at NVIDIA as a Compute Performance Developer Technology Engineer. I have researched the work and research done at NVIDIA and within the Compute Developer Technology (Devtech) team, and I believe that I have a unique combination of engineering and computer science skills that would add a lot of value to your team and research capabilities.
-
-\medskip % Extra whitespace before the next section
-
-Ever since I was a child after my Dad gifted me my very own PC, I went to town playing video games and upgrading my PC with each new generation of GPUs. Seeing massive performance enhancements between different generations of GPUs got me thinking about whether all this computational horsepower can be used to simulate the real world instead of just video games. I was thrilled to learn about the release of CUDA in 2007 which enables high performance scientific computing on GPUs. I decided to seek the highest engineering degree possible from a world-class university such as McGill University with an emphasis on computational approaches to solving real-world engineering problems. To my surprise, most commercial simulation software used in engineering did not take advantage of GPU acceleration and relied on CPU parallel processing instead. Engineering structural and fluid dynamics simulations involve a lot of linear algebra which CUDA and cuBLAS excel at. I could not accelerate my simulations using CUDA due to the proprietary nature of such software.
+I felt even more encouraged to apply after learning about how much NVIDIA values diversity and openness. The prospect of collaborating and working with others from different backgrounds and cultures in a multidisciplinary team always excites me and has always been a defining characteristic of my academic career.
 
 \medskip % Extra whitespace before the next section
 
-I opted for creating my own simulation programs in C++ where, all linear algebra operations are accelerated using CUDA and was mind-blown by the performance enhancements. I managed to apply the principles of GPU computing to a wide range of problems in engineering, machine learning, and until recently, epidemiological models as well! To the best of my knowledge, I was one of the very first researchers to GPU accelerate agent-based models in epidemiology. I obtained very promising results that predict the spread of COVID-19 in local urban centers using this improved simulation tool. The results have been submitted for publication in a COVID-19 special issue of the IEEE Transactions on Emerging Topics in Computational Intelligence (TETCI). In addition to my scientific computing experience, I specialize in numerical optimization. I have used my knowledge of optimization to not only optimize software but real-world engineering products and systems. I have applied optimization to optimize aircraft, aeroengines and decision-making in operations research.
+I believe that my strong mathematical and simulation skills, combined with my love for mentoring and guiding others will add a lot of value to the research done at NVIDIA. Nothing gives me a greater sense of joy than hearing about the accomplishments of my students. I was so excited to learn about the wide array of applications for AI and GPU computing when I watched several of NVIDIA's research showcases. The applications vary all the way from space exploration to micro-biology and medical imaging. The multidisciplinary nature of the work done at NVIDIA is so inspirational and aligns well with my career goals.
 
 \medskip % Extra whitespace before the next section
 
-Combining my background in optimization and scientific computing can add a lot of value to the NVIDIA's Devtech team by optimizing both the software components of scientific computing applications and the hardware architecture of the GPU used to run them. I want to mention that working at a leading AI and computing company such as NVIDIA is a personal dream and goal of mine and I feel that NVIDIA could offer me the opportunity to contribute to this exciting and ever-changing field. I hope that you enjoy perusing my profile and interests and looking forward to the chance to discuss my research contributions with your recruiting team. I also hope to learn as much as possible about the exciting and cutting-edge research being done at NVIDIA!
+Although I am happy with my current job working as a researcher at McGill and coming up with my own research ideas, guiding and supervising students to make their ideas a reality, I wanted to explore something different that I could only find at NVIDIA. That is the opportunity to work on something cool and fun that can benefit all of human-kind such as video games, immersive virtual worlds, and even space exploration; not just topics related to engineering. 
+
+\medskip % Extra whitespace before the next section
+
+I hope you enjoy going through my profile and my projects on GitHub (linked in my CV) and I hope we can discuss all of this. Needless to say, I am a huge fan of the technologies and products enabled by NVIDIA's GPUs! I feel that this passion will push me far beyond my abilities. Ever since I was a kid, working with computer technology leaders is all I ever wanted to do and seeing this opportunity, I think it could actually happen!
+
+% I realize that being a research scientist entails three things: 1) Mentorship and supervision acumen 2) Strong research skills 3) Good communication skills to present key takeaways from cutting-edge research.
+
+% I have ample experience with all three fields and thrive on mentoring and teaching my students. Nothing gives me a greater sense of joy than hearing about the accomplishments of my students. As you can tell from my career profile, I made it a habit to always engage in research and mentorship simultaneously and never turned away anyone that asks for my opinion or guidance.
+
+% I have a strong mathematical background in research related to numerical optimization, simulation and data-driven models. I combined these three aspects to automate time-consuming simulation-based design problems in the aerospace industry and was able to transform my ideas into industrial practice through the training programs and workshops that I conducted for our industrial partners (GKN Aerospace). Due to my multidisciplinary skillset I even ventured into epidemiology when the COVID-19 pandemic struck and developed detailed agent-based models (accelerated by CUDA) for forecasting the trajectory of the epidemic. I came up intervention policies that help governments make decisions when little is known about the pandemic.
+
 
 \medskip % Extra whitespace before the next section
 
