--- a/structure_semi.tex
+++ b/structure_semi.tex
@@ -40,7 +40,7 @@
 \geometry{
 	hmargin=1.5cm, % Horizontal margin
 	vmargin=1.75cm, % Vertical margin
-	a4paper, % Paper size, change to letterpaper for US letter size
+	letterpaper, % Paper size, change to letterpaper for US letter size
 	%showframe, % Uncomment to show how the type block is set on the page -- typically for debugging
 }
 
