--- a/Cover_letters/UofT/Cover_letter.tex
+++ b/Cover_letters/UofT/Cover_letter.tex
@@ -64,7 +64,7 @@
 \parbox[top][0.1\textheight][c]{\linewidth}{ % Parbox to hold the author name and CV text; fixed height to match the coloured box to the right, centred vertically and full line width
 	\vspace{0.0\textheight} % Reduce whitespace above the parbox to separate it from the main content
 	\centering % Centre text
-	{\sffamily\Huge \cvname}\\\medskip % Your name
+	{\sffamily\LARGE \cvname}\\\medskip % Your name
 }
 
 %----------------------------------------------------------------------------------------
@@ -98,38 +98,43 @@
 %	ADDRESS
 %----------------------------------------------------------------------------------------
 \today\\[6pt]
-Andrea Malloni\\
-HR manager, Human Resources\\
-\textit{NVIDIA}\\
-Toronto, Ontario, Canada\\[6pt] \medskip
+Prof. Heather MacLean\\
+Department of Civil \& Mineral Engineering\\
+\textit{University of Toronto}\\
+35 St. George St.\\
+Toronto, Ontario, Canada, M5S 1A4\\[6pt] \medskip
 %----------------------------------------------------------------------------------------
 %	MAIN BODY
 %----------------------------------------------------------------------------------------
-Dear Ms. Malloni,
+Dear Prof. MacLean,
+
+% alternative powertrains and light-weighting are studied separately in the literature
+% Interesting to identify causal loops in the LCA module and exploit dynamic LCA analyses
+% Interesting to factor in the effects of the COVID pandemic on fleet vehicle kilometers and GHG for 2020/2021
+% Multidiscplinary optimization of several submodule policies that are coordinated by the LCA module (e.g. GHG emissions vs fleet fuel use vs vehicle characteristics vs material recovery rates) Vehicle weight minimization trade-off with performance and features
 
 \medskip % Extra whitespace before the next section 
-I am very excited to learn of the opportunity to be a part of NVIDIA's growing research team as a research scientist. While I may not your typical computer science candidate because of my mechanical engineering background, I believe I can add a lot of value to the research done at NVIDIA because of my multidisciplinary skillset. I view this as a strength because I am able to communicate ideas and concepts openly across multiple teams and help bring researchers from several backgrounds together. 
-
-I felt even more encouraged to apply after learning about how much NVIDIA values diversity and openness. The prospect of collaborating and working with others from different backgrounds and cultures in a multidisciplinary team always excites me and has always been a defining characteristic of my academic career.
+I am very excited to learn of the opportunity to work on life cycle assessment of low carbon light-duty vehicle (LDV) technologies. I have perused your recent work and have always shared your views surrounding the rapid electrification of modern light vehicle fleets. Most countries are introducing bans within the next 30 years on internal combustion engines when in reality, they should be focusing on reducing the need to drive longer distances using heavier vehicles (such as SUVs) which has been steadily climbing in the past few years.
 
 \medskip % Extra whitespace before the next section
 
-I believe that my strong mathematical and simulation skills, combined with my love for mentoring and guiding others will add a lot of value to the research done at NVIDIA. Nothing gives me a greater sense of joy than hearing about the accomplishments of my students. I was so excited to learn about the wide array of applications for AI and GPU computing when I watched several of NVIDIA's research showcases. The applications vary all the way from space exploration to micro-biology and medical imaging. The multidisciplinary nature of the work done at NVIDIA is so inspirational and aligns well with my career goals.
+Detailed life-cycle analysis of alternative technological pathways (electric vehicles, fuel cell vehicles, and powertrain technologies) are the key to formulating a policy that comprises several measures for meeting the greenhouse gas (GHG) emission targets for the next few decades. I believe that my research experience in the field of remanufacturing of aeroengine components can help enrich existing LCA models of LDV fleets. I have developed models for estimating the impact of remanufacturing on the overall performance of aeroengine components as well as algorithms and design metrics for deciding on how and when to remanufacture an existing product.
 
 \medskip % Extra whitespace before the next section
 
-Although I am happy with my current job working as a researcher at McGill and coming up with my own research ideas, guiding and supervising students to make their ideas a reality, I wanted to explore something different that I could only find at NVIDIA. That is the opportunity to work on something cool and fun that can benefit all of human-kind such as video games, immersive virtual worlds, and even space exploration; not just topics related to engineering. 
+Although my research was more oriented towards life extension of individual products and components rather than entire fleets, I feel there are some similarities involved when it comes to circular economy aspects of design. In other words, adopting a circular economy paradigm in design and policy-making by considering remanufacturing (e.g., vehicle lightweighting) alongside new technologies (such as electric vehicles) can help extract the most value from product fleets (in the form of lower lifecycle costs and GHGs).
 
 \medskip % Extra whitespace before the next section
 
-I hope you enjoy going through my profile and my projects on GitHub (linked in my CV) and I hope we can discuss all of this. Needless to say, I am a huge fan of the technologies and products enabled by NVIDIA's GPUs! I feel that this passion will push me far beyond my abilities. Ever since I was a kid, working with computer technology leaders is all I ever wanted to do and seeing this opportunity, I think it could actually happen!
+I realize that being a researcher entails three things: 1) Mentorship and supervision acumen 2) Strong research skills 3) Good communication skills to present key takeaways from cutting-edge research.
 
-% I realize that being a research scientist entails three things: 1) Mentorship and supervision acumen 2) Strong research skills 3) Good communication skills to present key takeaways from cutting-edge research.
+\medskip % Extra whitespace before the next section
 
-% I have ample experience with all three fields and thrive on mentoring and teaching my students. Nothing gives me a greater sense of joy than hearing about the accomplishments of my students. As you can tell from my career profile, I made it a habit to always engage in research and mentorship simultaneously and never turned away anyone that asks for my opinion or guidance.
+I have ample experience with all three fields and thrive on mentoring and teaching my students. Nothing gives me a greater sense of joy than hearing about the accomplishments of my students. As you can tell from my career profile, I made it a habit to always engage in research and mentorship simultaneously and never turned away anyone that asks for my opinion or guidance.
 
-% I have a strong mathematical background in research related to numerical optimization, simulation and data-driven models. I combined these three aspects to automate time-consuming simulation-based design problems in the aerospace industry and was able to transform my ideas into industrial practice through the training programs and workshops that I conducted for our industrial partners (GKN Aerospace). Due to my multidisciplinary skillset I even ventured into epidemiology when the COVID-19 pandemic struck and developed detailed agent-based models (accelerated by CUDA) for forecasting the trajectory of the epidemic. I came up intervention policies that help governments make decisions when little is known about the pandemic.
+\medskip % Extra whitespace before the next section
 
+I have a strong mathematical background in research related to numerical optimization, simulation and data-driven models. I combined these three aspects to automate time-consuming simulation-based design problems in the aerospace industry and was able to transform my ideas into industrial practice through the training programs and workshops that I conducted for our industrial partners (GKN Aerospace).
 
 \medskip % Extra whitespace before the next section
 
