modify NVIDIA cover letter

--- a/Cover_letters/nvidia/Cover_letter.tex
+++ b/Cover_letters/nvidia/Cover_letter.tex
@@ -108,13 +108,11 @@ Toronto, Ontario, Canada\\[6pt] \medskip
 Dear Ms. Malloni,
 
 \medskip % Extra whitespace before the next section 
-I am very excited to learn of the opportunity to be a part of NVIDIA's growing research team as a research scientist. While I may not your typical computer science candidate because of my mechanical engineering background, I believe I can add a lot of value to the research done at NVIDIA because of my multidisciplinary skillset. I view this as a strength because I am able to communicate ideas and concepts openly across multiple teams and help bring researchers from several backgrounds together. 
-
-I felt even more encouraged to apply after learning about how much NVIDIA values diversity and openness. The prospect of collaborating and working with others from different backgrounds and cultures in a multidisciplinary team always excites me and has always been a defining characteristic of my academic career.
+I already applied to another similar posting on the NVIDIA website so I apologize if this is considered a duplicate application. Its just that I feel very passionate about conducting research at NVIDIA and would love the chance to bring my ideas and expertise to your team.
 
 \medskip % Extra whitespace before the next section
 
-I believe that my strong mathematical and simulation skills, combined with my love for mentoring and guiding others will add a lot of value to the research done at NVIDIA. Nothing gives me a greater sense of joy than hearing about the accomplishments of my students. I was so excited to learn about the wide array of applications for AI and GPU computing when I watched several of NVIDIA's research showcases. The applications vary all the way from space exploration to micro-biology and medical imaging. The multidisciplinary nature of the work done at NVIDIA is so inspirational and aligns well with my career goals.
+I believe that my strong mathematical and simulation skills, combined with my love for mentoring and guiding others will add a lot of value to the research done at NVIDIA. Nothing gives me a greater sense of joy than hearing about the accomplishments of my students. I was so excited to learn about the wide array of applications for AI and GPU computing when I watched several GTC talks and chatted with experts. The applications vary all the way from space exploration to micro-biology and medical imaging. The multidisciplinary nature of the work done at NVIDIA is so inspirational and aligns well with my career goals.
 
 \medskip % Extra whitespace before the next section
 
