--- a/Khalil_CV_semiacademic.tex
+++ b/Khalil_CV_semiacademic.tex
@@ -429,7 +429,7 @@ Oil pipelines are monitored for corrosion on regular intervals using conventiona
 \medskip % Extra whitespace before the next section
 
 {\raggedright\textbf{``Development of a human operated mobile hexapod platform"}}\\
-I designed and developed of a six-legged hexapod platform that employed a hydraulic system to actuate each of the six robotic manipulators used for locomotion. The control and distribution of the hydraulic power was controlled through state-of-the art technology employing hydraulic servo-valves. As of today, the design stands at a total weight of 3 tons and occupies a space of 5m x 2m x 3m high. The robotic manipulator which constitutes a leg of the hexapod was reverse engineered and repurposed for walking from a used hydraulic excavator manufactured by JCB. I made a faithful reproduction of the 3D CAD model in SOLIDWORKS by taking measurements from the physical excavator so that the necessary modifications can be designed and manufactured. Most modifications where manufactured manually using a milling machine, lathe, and MIG/TIG welding. More complex parts where tolerances are critical were machined via a CNC milling machine. Once the mechanical setup was built, I used kinematics, and rotation matrices to compute the necessary actuation for tracking a given trajectory. I used and configured a microcontroller (Arduino) to provide the actuation signal to the servo-valves that distribute hydraulic power throughout the hexapod and achieved smooth tracking of the target trajectory that I provided.
+I designed and developed of a six-legged hexapod platform that employed a hydraulic system to actuate each of the six robotic manipulators used for locomotion. The control and distribution of the hydraulic power was controlled through state-of-the art technology employing hydraulic servo-valves. As of today, the design stands at a total weight of 3 tons and occupies a space of 5m x 2m x 3m high. The robotic manipulator which constitutes a leg of the hexapod was reverse engineered and repurposed for walking from a used hydraulic excavator manufactured by JCB. I made a faithful reproduction of the 3D CAD model in SOLIDWORKS by taking measurements from the physical excavator so that the necessary modifications can be designed and manufactured. Most modifications were manufactured manually using a milling machine, lathe, and MIG/TIG welding. More complex parts where tolerances are critical were machined via a CNC milling machine. Once the mechanical setup was built, I used kinematics, and rotation matrices to compute the necessary actuation for tracking a given trajectory. I used and configured a microcontroller (Arduino) to provide the actuation signal to the servo-valves that distribute hydraulic power throughout the hexapod and achieved smooth tracking of the target trajectory that I provided.
 
 \programlang{\color{black}}{SOLIDWORKS}~\programlang{\color{black}}{manufacturing}~\programlang{\color{black}}{CNC machining}~\programlang{\color{black}}{kinematics}~\programlang{\color{black}}{rotation matrices}~\programlang{\color{black}}{Arduino}
 
