--- a/Khalil_CV_semiacademic.tex
+++ b/Khalil_CV_semiacademic.tex
@@ -46,7 +46,7 @@
 \cvdate{} % Date of birth
 \cvaddress{Montr\'{e}al Qu\'{e}bec, Canada} % Short address/location, use \newline if more than 1 line is required
 \cvnumberphone{+1 (514) 572-7367} % Phone number
-\cvsite{sol.research.mcgill.ca} % Personal website
+\cvsite{khbalhandawi.github.io} % Personal website
 \cvmail{khalil.alhandawi@mail.mcgill.ca} % Email address
 \cvgithub{github.com/khbalhandawi} % GitHub
 \cvlinkedin{linkedin.com/in/khbalhandawi} % LinkedIn
@@ -83,7 +83,7 @@
 			\ifthenelse{\equal{\cvaddress}{}}{}{\raisebox{-1pt}{\faHome} & \cvaddress \\} % Address
 			\ifthenelse{\equal{\cvaddress}{}}{}{\raisebox{-1pt}{\faPhone} & \cvnumberphone \\} % Phone number
 			\ifthenelse{\equal{\cvmail}{}}{}{\raisebox{0pt}{\small\faEnvelope} & \href{mailto:\cvmail}{\cvmail} \\} % Email address
-			\ifthenelse{\equal{\cvsite}{}}{}{\raisebox{-1pt}{\small\faDesktop} & \href{https://\cvsite}{\cvsite} \\} % Website
+			\ifthenelse{\equal{\cvsite}{}}{}{\raisebox{-1pt}{\small\faGlobe} & \href{https://\cvsite}{\cvsite} \\} % Website
 			\ifthenelse{\equal{\cvgithub}{}}{}{\raisebox{-1pt}{\faGithub} & \href{https://\cvgithub}{\cvgithub} \\} % GitHub profile
 			\ifthenelse{\equal{\cvlinkedin}{}}{}{\raisebox{-1pt}{\faLinkedinSquare} & \href{https://\cvlinkedin}{\cvlinkedin} \\} % LinkedIn profile
 			% See fontawesome.pdf in the fonts folder for all icons you can use
@@ -366,7 +366,7 @@
 	{Montr\'{e}al, Canada} % Location
 	{Website manager} % Job title
 	{$\bullet$ Update the lab's website and disseminate new research to the public.}{} % Description
-	\tableentry{}{$\bullet$ \href{https://\cvsite}{https://www.\cvsite}.}{spaceafter}
+	\tableentry{}{$\bullet$ \href{http://www.sol.research.mcgill.ca/}{http://www.sol.research.mcgill.ca/}.}{spaceafter}
 
 	%------------------------------------------------
 
